# ummfiltered

./: .gitignore  ARCHITECTURE.md  NATURALNESS_ROADMAP.md  README.md  package-lock.json  pyproject.toml
desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
desktop/scripts/: build_macos_worker.py  release_macos_dmg.sh
desktop/src/: App.test.tsx  App.tsx  setupTests.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src/lib/: settings.test.ts  settings.ts  tauri.ts  types.ts
tests/: test_audio.py  test_config.py  test_cut_planner.py  test_detect.py  test_ffmpeg_tools.py  test_gui_types.py  test_gui_worker.py  test_interpolate.py  test_interpolator_tools.py  test_models.py  test_naturalness_golden.py  test_phrase_planner.py  test_pipeline_e2e.py  test_pipeline_service.py  test_render.py  test_repair.py  test_runtime_paths.py  test_transcribe.py  test_verify.py
tests/fixtures/naturalness/: README.md
tests/fixtures/naturalness/test1/: expected_transcript.txt  fillers.json  manifest.json
tests/fixtures/naturalness/test2/: expected_transcript.txt  fillers.json  listening_notes.md  manifest.json
tests/fixtures/naturalness/test3/: expected_transcript.txt  fillers.json  manifest.json
ummfiltered/: audio.py  cli.py  config.py  cut_planner.py  detect.py  edit_plan.py  ffmpeg_tools.py  ffprobe_stub.py  gui_types.py  gui_worker.py  interpolate.py  interpolator_tools.py  models.py  phrase_planner.py  pipeline.py  render.py  repair.py  runtime_paths.py  transcribe.py  verify.py
