[package]
name = "ummfiltered-desktop"
version = "0.1.0"
description = "Desktop GUI for UmmFiltered"
authors = ["OpenAI Codex"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
